[package]
name = "minix_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
enum_dispatch = "0.3.11"
log = "0.4.17"
simplelog = "^0.12.0"
